--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Saad Nadeem",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "path": "^0.12.7",
